Add tabbed page

--- a/PowerWaiters/PowerWaiters/PowerWaiters/PowerWaiters.csproj
+++ b/PowerWaiters/PowerWaiters/PowerWaiters/PowerWaiters.csproj
@@ -19,6 +19,9 @@
     <EmbeddedResource Update="Views\MainPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\MainTabbedPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\ProfilePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
