--- a/PowerWaiters/PowerWaiters/PowerWaiters.Android/PowerWaiters.Android.csproj
+++ b/PowerWaiters/PowerWaiters/PowerWaiters.Android/PowerWaiters.Android.csproj
@@ -89,7 +89,9 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\icon.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\orders_icon.png" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PowerWaiters\PowerWaiters.csproj">
       <Project>{AE085A70-EA23-49CA-8664-63492A93E893}</Project>
@@ -98,9 +100,6 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\checkin_icon.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\drawable\oreders_icon.png" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\golist_icon.png" />
