--- a/PowerWaiters/PowerWaiters/PowerWaiters.Android/PowerWaiters.Android.csproj
+++ b/PowerWaiters/PowerWaiters/PowerWaiters.Android/PowerWaiters.Android.csproj
@@ -114,13 +114,31 @@
     <AndroidResource Include="Resources\drawable\rating_icon.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\gold_achievement.png" />
+    <AndroidResource Include="Resources\drawable\gold_achievements.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\silver_achievement.png" />
+    <AndroidResource Include="Resources\drawable\bronze_achievements.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\bronze_achievement.png" />
+    <AndroidResource Include="Resources\drawable\silver_achievements.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\clock.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\bronze_cup.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\gold_cup.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\silver_cup.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\gray_cup.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\purple_cup.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
