--- a/PowerWaiters/PowerWaiters/PowerWaiters.Android/PowerWaiters.Android.csproj
+++ b/PowerWaiters/PowerWaiters/PowerWaiters.Android/PowerWaiters.Android.csproj
@@ -141,6 +141,9 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\purple_cup.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\logo.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
